Fix all overflow issues so far

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -154,22 +154,30 @@ a.issue-title:hover,a.issue-title:focus {
     padding: 10px 5px 0 5px;
     border: 1px solid #f1f1f1;
 }
+.center-cropped-wrapper {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 300px;
+    min-height: 285px;
+}
 .center-cropped {
-    width: 48%;
-    height: 48%;
+    width: 49%;
+    height: 49%;
     min-width: 280px;
     min-height: 280px;
-    max-height: 300px;
+    max-height: 280px;
     background-position: center center;
     background-repeat: no-repeat;
     overflow: hidden;
+    display: inline-block;
 }
-
+div.center-cropped:nth-child(2) {
+    margin: 10px 0;
+}
 /* Set the image to fill its parent and make transparent */
 .center-cropped img {
     width: 100%;
     height: 100%;
-    min-height: 300px;
     /* IE 8 */
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     /* IE 5-7 */
@@ -367,6 +375,21 @@ textarea:focus {
 .user-home-summary .merchant {
     display: block;
 }
+/*
+This is not a bootstrap media query size
+It is necessary to help styling items picture while resizing
+*/
+@media (min-width: 610px) {
+    div.center-cropped:nth-child(2) {
+        margin: 0 0 0 10px;
+    }
+    .center-cropped-wrapper {
+        overflow-y: hidden;
+    }
+}
+/*
+Bootstrap media query sizes
+*/
 @media (min-width: 768px) {
     .col-sm-3ths {
         width: 33.33%;
@@ -378,6 +401,12 @@ textarea:focus {
     }
     .user-home-summary .merchant {
         display: inline;
+    }
+    div.center-cropped:nth-child(2) {
+        margin: 0 0 0 10px;
+    }
+    .center-cropped-wrapper {
+        overflow-y: hidden;
     }
 }
 @media (min-width: 992px) {
@@ -397,6 +426,12 @@ textarea:focus {
     .user-home-summary .merchant {
         display: none;
     }
+    div.center-cropped:nth-child(2) {
+        margin: 0 0 0 10px;
+    }
+    .center-cropped-wrapper {
+        overflow-y: hidden;
+    }
 }
 @media (min-width: 1200px) {
     .col-lg-3ths {
@@ -414,6 +449,12 @@ textarea:focus {
     }
     .user-home-summary .merchant {
         display: block;
+    }
+    div.center-cropped:nth-child(2) {
+        margin: 0 0 0 10px;
+    }
+    .center-cropped-wrapper {
+        overflow-y: hidden;
     }
 }
 img.resize{
@@ -489,12 +530,9 @@ img.resize{
 .tab-icon {
     margin-right: 5px
 }
-.convo {
-    max-height: 600px;
-    margin-bottom: 0;
-    padding-bottom: 5px;
-    /*overflow: -moz-scrollbars-none;
-    -ms-overflow-style: none;*/
+.message-outer {
+    height: 575px;
+    overflow-x: hidden;
 }
 .message {
     width: 100%;
@@ -523,12 +561,14 @@ img.resize{
     color: lightgray;
 }
 .messages-wrapper {
-    padding-top: 10px;
     /*overflow-y: scroll;
     overflow: -moz-scrollbars-none;
     ms-overflow-style: none;*/
-    padding-right: 10px;
-    min-height: 450px;
+    padding: 10px 10px 0 10px;
+    margin-right: -20px;
+    max-height: 470px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 .message > div {
     float: left;
@@ -538,7 +578,7 @@ img.resize{
 }
 .message-from {
     -webkit-box-shadow: 0 2px 2px -2px #888;
-    box-shadow: 0 2px 2px -2px #888;
+    box-shadow: 0 2px 4px -2px #888;
     position: relative;
     height: 30px;
 }
@@ -552,9 +592,7 @@ img.resize{
     padding: 15px;
     border: 1px solid #ddd;
     outline: none;
-    /*overflow-y: scroll;
-    overflow: -moz-scrollbars-none;
-    -ms-overflow-style: none;*/
+    overflow-y: scroll;
 }
 .message-reply:focus {
     border-color: #92d13d!important;
@@ -589,9 +627,17 @@ img.resize{
     padding: 0 15px;
 }
 /* Directly override bootstrap list-group-item */
+.list-group {
+    box-shadow: none;
+}
 .list-group-item > p {
     overflow: hidden;
     height: 17px;
+}
+.list-group-item-heading {
+    overflow: hidden;
+    white-space: nowrap;
+    margin-right: 25px;
 }
 .list-group-item .badge {
     background-color: #AAAAAA;
@@ -604,10 +650,20 @@ img.resize{
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
-.close {
-    font-size: 18px;
+.close > .glyphicon {
+    font-size: 15px!important;
+    color: #000000!important;
 }
 /* Add custom convo-preview to list-group-item */
+.convo {
+    max-height: 625px;
+    padding-bottom: 1px;
+    /*border-top: 1px solid #dddddd;
+    border-bottom: 1px solid #dddddd;*/
+    border-radius: 4px;
+    /*overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;*/
+}
 .convo-preview {
     position: relative;
     height: 62px;
@@ -621,15 +677,11 @@ img.resize{
 .close-wrapper > .close {
     display: none;
 }
-.convo-preview.active > .close-wrapper > .close,
+.convo-preview.active:hover > .close-wrapper > .close,
+.convo-preview.active:focus > .close-wrapper > .close,
 .convo-preview:hover > .close-wrapper > .close,
 .convo-preview:focus > .close-wrapper > .close {
     display: inline;
-}
-.list-group > div {
-    border-radius: 4px;
-    /* box-shadow wouldn't show because the outer div needs overflow:hidden to hide the scrollbars */
-    /* box-shadow: 0 0 5px #ccc; */
 }
 .list-group > div:first-child .list-group-item {
     border-top-left-radius: 4px;
@@ -680,13 +732,19 @@ img.resize{
     color: rgb(51, 51, 51)!important;
     text-shadow: none!important;
 }
+.convo-placeholder {
+    background-color: #f1f1f1;
+    border-radius: 2px;
+}
 .outer-convo {
+    background: none;
     overflow: hidden;
-    max-height: 600px;
+    height: 635px;
+    padding: 5px;
 }
 .scroll {
-    margin-right: -18px !important;
+    margin-right: -25px;
     overflow-y: scroll;
     overflow-x: hidden;
-    padding-right: 18px;
+    padding-bottom: 2px;
 }
